# Checkers2017

./: CMakeLists.txt  main.cpp
